<resources>
    <string name="app_name">menu_template</string>
    <string name="item_one">item one</string>
    <string name="item_two">item_two</string>
    <string name="download">download</string>
    <string name="copy">copy</string>
    <string name="share_link">share link</string>
    <string name="moses_ouma_wangira_developer">Moses Ouma Wangira (developer)</string>
    <string name="context_action_one">context action one</string>
    <string name="context_action_two">context action two</string>
    <string name="context_action_three">context action three</string>
    <string name="pop_up">Pop Up Menu Button</string>
    <string name="pop_up_one">pop up one</string>
    <string name="pop_up_two">pop up two</string>
    <string name="pop_up_three">pop up three</string>
    <string name="pop_up_dialogue_button">Pop Up Dialogue Button</string>
    <string name="show_action_mode_context_menu">Show Action Mode Context Menu</string>
    <string name="phone_number">phone number</string>
    <string name="amount">Amount</string>
    <string name="m_pesa_payment">M-PESA PAYMENT</string>
    <string name="pay">PAY</string>
</resources>
