<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/dialogue_background">
    
    <ImageView
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/m_pesa"
        android:background="#ffffff"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/m_pesa_payment"
        />

    <EditText
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"/>
    <EditText
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"/>
    <Button
        android:id="@+id/pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/pay"
        android:textColor="#ffffff"
        android:background="@drawable/pay_background"/>

</LinearLayout>